--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@midwayjs/info": "^3.0.0",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
-    "@midwayjs/validate": "^3.0.0"
+    "@midwayjs/swagger": "3",
+    "@midwayjs/validate": "^3.0.0",
+    "swagger-ui-dist": "^5.3.2"
   },
   "devDependencies": {
     "@midwayjs/cli": "^2.0.0",
