--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@midwayjs/decorator": "^3.0.0",
     "@midwayjs/i18n": "3",
     "@midwayjs/info": "^3.0.0",
+    "@midwayjs/jwt": "3",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
     "@midwayjs/swagger": "3",
