--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@midwayjs/jwt": "3",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
+    "@midwayjs/security": "3",
     "@midwayjs/swagger": "3",
+    "@midwayjs/upload": "3",
     "@midwayjs/validate": "^3.0.0",
     "swagger-ui-dist": "^5.3.2"
   },
